# fscio.cdt

./: CMakeLists.txt  README.md  build.sh  install.sh  uninstall.sh
.buildkite/: pipeline.yml
docker/: install_deb.sh
docs/guides/: abi-generator-attributes.md  basic-usage.md  cmake.md  first-smart-contract.md  native-tester.md  upgrading-from-1.2-to-1.3.md
docs/tools/: fscio-abidiff.md  fscio-abigen.md  fscio-cpp.md  fscio-init.md  fscio-ld.md
examples/abigen_test/: CMakeLists.txt  abitest.cpp
examples/hello/: CMakeLists.txt  README.txt
examples/multi_index_example/: CMakeLists.txt  README.txt
examples/send_inline/: CMakeLists.txt  README.txt
examples/send_inline/include/: send_inline.hpp
examples/send_inline/src/: CMakeLists.txt  send_inline.cpp
fscio_llvm/cmake/: config-ix.cmake  config.guess
fscio_llvm/docs/: CodeOfConduct.rst
imports/: fscio.imports.in
libraries/: CMakeLists.txt
libraries/boost/include/boost/config/detail/: select_platform_config.hpp
libraries/fsciolib/: CMakeLists.txt  action.h  action.hpp  asset.hpp  binary_extension.hpp  chain.h  compiler_builtins.h  contract.hpp  crypto.cpp  crypto.h  crypto.hpp  datastream.hpp  db.h  dispatcher.hpp  fixed_bytes.hpp  fixed_key.hpp  fixedpoint.hpp  fscio.hpp  fsciolib.cpp  ignore.hpp  memory.hpp  multi_index.hpp  name.hpp  permission.h  permission.hpp  print.h  print.hpp  privileged.hpp  producer_schedule.hpp  public_key.hpp  serialize.hpp  singleton.hpp  symbol.hpp  system.h  system.hpp  time.hpp  transaction.h  transaction.hpp  types.h  varint.hpp
libraries/libc/: CMakeLists.txt
libraries/libc++/: CMakeLists.txt
libraries/libc++/libcxx/include/: Availability.h  AvailabilityInternal.h  iostream  new
libraries/libc++/libcxx/src/: fscio.cpp  locale.cpp
libraries/libc++/libcxx/src/include/: loader.h
libraries/libc/musl/include/bits/: alltypes.h  stddef.h
libraries/native/: CMakeLists.txt  crt.cpp  crt.hpp  intrinsics.cpp  intrinsics.hpp  intrinsics_def.hpp  tester.hpp
modules/: ClangExternalProject.txt  FscioCDTMacros.cmake.in  FscioLibConfig.cmake.in  FscioWasmToolchain.cmake.in  InstallCDT.cmake  LibrariesExternalProject.txt  TestsExternalProject.txt  ToolsExternalProject.txt  fscio.cdt-config.cmake
scripts/: fscio_build_amazon.sh  fscio_build_centos.sh  fscio_build_darwin.sh  fscio_build_fedora.sh  fscio_build_ubuntu.sh  generate_bottle.sh  generate_tarball.sh
scripts/ricardfsc/: README.md  ricardfsc.py
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  name_tests.cpp  print_tests.cpp  system_tests.cpp
tools/: CMakeLists.txt
tools/abidiff/: CMakeLists.txt  fscio-abidiff.cpp.in
tools/abigen/: CMakeLists.txt  fscio-abigen.cpp.in
tools/cc/: CMakeLists.txt  fscio-cc.cpp.in  fscio-cpp.cpp.in
tools/include/: compiler_options.hpp.in
tools/init/: CMakeLists.txt  fscio-init.cpp
tools/ld/: CMakeLists.txt  (+1 more)
(+108 files in other folders)
