include(ExternalProject)
# if no cdt root is given use default path
if(FSCIO_CDT_ROOT STREQUAL "" OR NOT FSCIO_CDT_ROOT)
   find_package(fscio.cdt)
endif()

ExternalProject_Add(
   send_inline_project
   SOURCE_DIR ${CMAKE_SOURCE_DIR}/src
   BINARY_DIR ${CMAKE_BINARY_DIR}/send_inline
   CMAKE_ARGS -DCMAKE_TOOLCHAIN_FILE=${FSCIO_CDT_ROOT}/lib/cmake/fscio.cdt/FscioWasmToolchain.cmake
   UPDATE_COMMAND ""
   PATCH_COMMAND ""
   TEST_COMMAND ""
   INSTALL_COMMAND ""
   BUILD_ALWAYS 1
)